
[project]
name = "mcp-everest"
version = "0.1.0"
description = "An MCP server for Percona Everest."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
     "mcp[cli]>=1.3.0",
     "python-dotenv>=1.0.1",
     "uvicorn>=0.34.0",
     "requests>=2.31.0",
]

[project.scripts]
mcp-everest = "mcp_everest.main:main"

[project.urls]
Home = "https://github.com/spron-in/mcp-everest"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_everest"]

[tool.ruff]
line-length = 101

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
